--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "webpack"
+		"build": "webpack",
+		"build:vue": "webpack -c webpack.vue.config.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +22,9 @@
 	"dependencies": {
 		"flexslider": "^2.7.2",
 		"jquery": "^1.12.4",
-		"jsdom": "^24.0.0"
+		"jsdom": "^24.0.0",
+		"vue": "^2.7.16",
+		"vue-loader": "^15.11.1",
+		"vue-template-compiler": "^2.7.16"
 	}
 }
